--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,12 @@ exclude = [".devcontainer/"]
 [dependencies]
 thiserror = "2"
 tokio = { version = "1", default-features = false, features = [
+    "rt",
+    "rt-multi-thread",
     "io-util",
     "time",
     "parking_lot",
 ] }
 futures-util = "0.3.31"
 tokio-util = { version = "0.7.16", features = ["codec"] }
+parking_lot = "0.12.4"
