--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ thiserror = "2"
 tokio = { version = "1", default-features = false, features = [
     "rt",
     "rt-multi-thread",
+    "macros",
     "io-util",
     "time",
     "parking_lot",
 ] }
-futures-util = "0.3.31"
+futures-util = { version = "0.3.31", features = ["sink"] }
 tokio-util = { version = "0.7.16", features = ["codec"] }
 parking_lot = "0.12.4"
