--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tokio = { version = "1", default-features = false, features = [
 futures-util = { version = "0.3.31", features = ["sink"] }
 tokio-util = { version = "0.7.16", features = ["codec"] }
 parking_lot = "0.12.4"
+bitflags = "2.9.4"
