--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/devcontainers/rust:latest
 
 RUN apt-get update && apt-get install -y \
     python3 \
-    python3-pip
+    python3-pip \
+    tcpdump
 
 RUN pip install pre-commit --break-system-packages
