--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           profile: minimal
           components: clippy, rustfmt
       - uses: Swatinem/rust-cache@v1
