--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -41,6 +41,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           profile: minimal
       - uses: Swatinem/rust-cache@v1
       - name: Build
