--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,6 +3,9 @@ on:
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
+    branches:
+      - master
+
 jobs:
   Publish:
     runs-on: ubuntu-latest
