--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/devcontainers/rust:latest
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
-    tcpdump
+    tcpdump \
+    netcat-openbsd
 
 RUN pip install pre-commit --break-system-packages
