--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -29,6 +29,8 @@ jobs:
         run: cargo fmt -- --check
       - name: Run Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
+      - name: Machete
+        uses: bnjbvr/cargo-machete@main
 
   build:
     name: Build for ${{ matrix.os }}
